--- a/app.css
+++ b/app.css
@@ -18,8 +18,23 @@ body {
   width: 100%;
 }
 
+p {
+  margin: 5px;
+  font-size: 16px;
+  color: #939CAD;;
+}
+
+h1 {
+  padding-left: 20px;
+  color: #1c202b;
+  font-size: 24px;
+  font-weight: 800;
+}
+
 .attribution { font-size: 11px; text-align: center; display: flex; align-items: center; justify-content: center; padding-top: 15px;}
 .attribution a { color: hsl(228, 45%, 44%);}
+
+/* header section */
 
 main {
 background-color: white;
@@ -30,34 +45,29 @@ padding-bottom: 0;
 border-radius: 1rem;
 }
 
-h1 {
-  padding-left: 20px;
-  color: #1c202b;
-  font-size: 24px;
-  font-weight: 800;
+main header {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 20px;
+}
+
+.count {
+  background-color: #0a327b;
+  color: white;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 8px;
+  padding: 1px 12px 1px 12px;
+  font-size: 20px;
+  width: 196px;
+  position: relative;
+  height: 25px;
+  top: -5px;
+  margin-left: 5px;
 }
 
 .plural {
   font-weight: 800;
-}
-
-p {
-  margin: 5px;
-  font-size: 16px;
-  color: #939CAD;;
-}
-
-main a {
-  text-decoration: none;
-  color: #939CAD;
-  display: flex;
-  align-items: center;
-  background-color: white;
-  height: 80px;
-  max-width: 670px;
-  margin: 0 2rem 1rem 2rem;
-  border-radius: 8px;
-  padding-left: 1.3rem;
 }
 
 button {
@@ -74,12 +84,39 @@ button:hover {
   cursor: pointer;
 }
 
-main header {
+/* main content section */
+
+main a {
+  text-decoration: none;
+  color: #939CAD;
   display: flex;
-  justify-content: space-between;
-  padding-top: 1rem;
-  padding-bottom: 20px;
+  align-items: center;
+  background-color: white;
+  height: 80px;
+  max-width: 670px;
+  margin: 0 2rem 1rem 2rem;
+  border-radius: 8px;
+  padding-left: 1.3rem;
 }
+
+.unread {
+  background-color: #F7FAFD;
+  height: 80px;
+  max-width: 670px;
+  margin: 0 2rem 1rem 2rem;
+  border-radius: 8px;
+  padding-left: 1.3rem;
+}
+
+.read:last-child {
+  margin-bottom: 0;
+}
+
+.bigger-size {
+  height: auto;
+}
+
+/* main img styles */
 
 img {
   width: 45px;
@@ -97,22 +134,10 @@ img {
   align-self: flex-start;
 }
 
+/* main text styles */
+
 .notif-text {
   margin-left: .3rem;
-}
-
-.count {
-  background-color: #0a327b;
-  color: white;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border-radius: 8px;
-  padding: 1px 12px 1px 12px;
-  font-size: 20px;
-  width: 196px;
-  position: relative;
-  height: 25px;
-  top: -5px;
-  margin-left: 5px;
 }
 
 .username {
@@ -146,19 +171,6 @@ p .dot {
   margin-bottom: 2px;
 }
 
-.unread {
-  background-color: #F7FAFD;
-  height: 80px;
-  max-width: 670px;
-  margin: 0 2rem 1rem 2rem;
-  border-radius: 8px;
-  padding-left: 1.3rem;
-}
-
-.read:last-child {
-  margin-bottom: 0;
-}
-
 p.time {
   margin-top: 0;
 }
@@ -180,10 +192,6 @@ p.time {
 
 .text-box:hover {
   background-color: #E5EFFA;
-}
-
-.bigger-size {
-  height: auto;
 }
 
 /* @media (max-width: 768px) {
